--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "main": "./dist/react-intersection-observer.js",
   "module": "./dist/react-intersection-observer.mjs",
   "exports": {
-    "require": "./dist/react-intersection-observer.js",
-    "default": "./dist/react-intersection-observer.modern.mjs",
-    "test-utils": "./dist/test-utils.js"
+    "./test-utils": "./test-utils.js",
+    ".": {
+      "import": "./react-intersection-observer.modern.mjs",
+      "require": "./react-intersection-observer.js"
+    }
   },
   "unpkg": "./dist/react-intersection-observer.umd.js",
   "typings": "./dist/index.d.ts",
