build: copy over package.json to dist

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist", "README.md", "LICENSE", "package.json"],
   "author": "Daniel Schmidt",
   "sideEffects": false,
   "repository": {
@@ -57,6 +56,7 @@
     "build": "run-s build:*",
     "build:bundle": "microbundle --name ReactIntersectionObserver --jsx React.createElement -f cjs,umd,es,modern --no-compress",
     "build:utils": "tsc -p tsconfig.test.json",
+    "build:copy": "node scripts/build-copy.js",
     "postbuild": "size-limit",
     "dev": "yarn run storybook",
     "lint": "eslint . --ext js,ts,tsx",
@@ -78,7 +78,12 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "dist"
+        }
+      ],
       "@semantic-release/github"
     ]
   },
