--- a/package.json
+++ b/package.json
@@ -96,19 +96,19 @@
   },
   "size-limit": [
     {
-      "path": "dist/react-intersection-observer.mjs",
+      "path": "dist/react-intersection-observer.esm.js",
       "name": "InView",
       "import": "{ InView }",
       "limit": "1.8 kB"
     },
     {
-      "path": "dist/react-intersection-observer.mjs",
+      "path": "dist/react-intersection-observer.esm.js",
       "name": "useInView",
       "import": "{ useInView }",
       "limit": "1.3 kB"
     },
     {
-      "path": "dist/react-intersection-observer.mjs",
+      "path": "dist/react-intersection-observer.esm.js",
       "name": "observe",
       "import": "{ observe }",
       "limit": "1 kB"
