chore: upgrade dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "target": "es5",
+    "target": "ESNext",
     "lib": ["es6", "es7", "esnext", "dom"],
     "types": ["vitest/globals", "@types/jest"],
     "jsx": "react",
