fix: publish main with semantic releases

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   },
   "release": {
     "branches": [
-      "master",
+      "main",
       {
         "name": "beta",
         "prerelease": true
