--- a/storybook/package.json
+++ b/storybook/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "storybook dev -p 9000",
-    "build": "storybook build --output-dir ../example"
+    "build": "storybook build"
   },
   "keywords": [],
   "author": "Daniel Schmidt",
