--- a/storybook/package.json
+++ b/storybook/package.json
@@ -15,38 +15,38 @@
   },
   "license": "MIT",
   "dependencies": {
-    "framer-motion": "^10.0.1",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "workspace:*",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@storybook/addon-a11y": "7.0.0-beta.61",
-    "@storybook/addon-actions": "7.0.0-beta.61",
-    "@storybook/addon-docs": "7.0.0-beta.61",
-    "@storybook/addon-essentials": "7.0.0-beta.61",
-    "@storybook/addon-interactions": "7.0.0-beta.61",
-    "@storybook/addon-links": "7.0.0-beta.61",
-    "@storybook/addons": "7.0.0-beta.61",
-    "@storybook/builder-vite": "7.0.0-beta.61",
-    "@storybook/react": "7.0.0-beta.61",
-    "@storybook/react-vite": "7.0.0-beta.61",
-    "@storybook/theming": "7.0.0-beta.61",
-    "@storybook/types": "7.0.0-beta.61",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "intersection-observer": "^0.12.2",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@mdx-js/react": "^2.3.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
-    "storybook": "7.0.0-beta.61",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4"
+    "@storybook/addon-a11y": "7.0.22",
+    "@storybook/addon-actions": "7.0.22",
+    "@storybook/addon-docs": "7.0.22",
+    "@storybook/addon-essentials": "7.0.22",
+    "@storybook/addon-interactions": "7.0.22",
+    "@storybook/addon-links": "7.0.22",
+    "@storybook/addons": "7.0.22",
+    "@storybook/builder-vite": "7.0.22",
+    "@storybook/react": "7.0.22",
+    "@storybook/react-vite": "7.0.22",
+    "@storybook/theming": "7.0.22",
+    "@storybook/types": "7.0.22",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "intersection-observer": "^0.12.2",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "storybook": "7.0.22",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
