--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
   "source": "./src/index.tsx",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/esm/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     "./test-utils": {
@@ -28,6 +28,7 @@
     "prebuild": "rm -rf dist lib",
     "build": "run-s build:*",
     "build:bundle": "tsup src/index.tsx",
+    "build:legacy": "tsup src/index.tsx --format esm --legacy-output --no-clean",
     "build:utils": "tsc -p tsconfig.test.json",
     "build:copy": "node scripts/build-copy.js",
     "postbuild": "size-limit",
