--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "build:bundle": "tsup src/index.tsx",
     "build:legacy": "tsup src/index.tsx --format esm --legacy-output --no-clean --no-dts",
     "build:utils": "tsc -p tsconfig.test.json",
-    "build:copy": "node scripts/build-copy.js",
+    "build:copy": "node scripts/build-copy.cjs",
     "postbuild": "size-limit",
     "dev": "run-p dev:*",
     "dev:package": "tsup src/index.tsx --watch",
     "dev:storybook": "pnpm --filter storybook dev",
-    "lint": "eslint . --ext js,ts,tsx",
+    "lint": "biome lint .",
     "release": "np --contents dist",
     "version": "pnpm build",
     "storybook:build": "pnpm build:bundle && pnpm --filter storybook build",
@@ -58,14 +58,6 @@
     "trailingComma": "all",
     "proseWrap": "always"
   },
-  "eslintIgnore": [
-    "*.snap",
-    "test-utils.js",
-    "dist/**",
-    "lib/**",
-    "example/**",
-    "webpack.config.js"
-  ],
   "release": {
     "branches": [
       "main",
@@ -87,15 +79,14 @@
     ]
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "npx lint-staged && vitest run"
   },
   "lint-staged": {
     "*.{js,json,css,md,ts,tsx}": [
       "prettier --write"
     ],
     "src/**/*.{ts,tsx}": [
-      "eslint",
-      "vitest related --run"
+      "biome lint --apply"
     ]
   },
   "size-limit": [
@@ -122,31 +113,25 @@
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^8.2.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "^8.43.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jsdom": "^22.1.0",
-    "lint-staged": "^13.2.2",
+    "@biomejs/biome": "^1.5.3",
+    "@size-limit/preset-small-lib": "^11.0.2",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.2.0",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "jsdom": "^24.0.0",
+    "lint-staged": "^15.2.1",
     "microbundle": "^0.15.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "simple-git-hooks": "^2.8.1",
-    "size-limit": "^8.2.4",
-    "tsup": "^7.0.0",
-    "typescript": "^5.1.3",
-    "vitest": "^0.32.2"
+    "simple-git-hooks": "^2.9.0",
+    "size-limit": "^11.0.2",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.2"
   },
   "pnpm": {
     "peerDependencyRules": {
