feat: migrate to Biome formatting
Remove prettier in favour of Biome.
This results in some updates to multiple files, mainly because of switching from single to double quotes.

--- a/biome.json
+++ b/biome.json
@@ -6,6 +6,10 @@
   "organizeImports": {
     "enabled": true
   },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space"
+  },
   "linter": {
     "enabled": true,
     "rules": {
