--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,14 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
   "files": {
-    "ignore": ["node_modules/**", "dist/**", "storybook-static/**"]
+    "ignore": [
+      ".idea/**",
+      "node_modules/**",
+      "dist/**",
+      "coverage/**",
+      "storybook-static/**",
+      "pnpm-lock.yaml"
+    ]
   },
   "organizeImports": {
     "enabled": true
