--- a/storybook/package.json
+++ b/storybook/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "storybook dev -p 9000",
-    "build": "storybook build"
+    "build": "storybook build",
+    "lint": "biome lint ."
   },
   "keywords": [],
   "author": "Daniel Schmidt",
@@ -21,21 +22,15 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
+    "@biomejs/biome": "^1.5.3",
     "@mdx-js/react": "^3.0.0",
-    "@storybook/addon-a11y": "7.6.12",
-    "@storybook/addon-actions": "7.6.12",
     "@storybook/addon-docs": "7.6.12",
     "@storybook/addon-essentials": "7.6.12",
-    "@storybook/addon-interactions": "7.6.12",
-    "@storybook/addon-links": "7.6.12",
     "@storybook/addons": "7.6.12",
     "@storybook/builder-vite": "7.6.12",
     "@storybook/react": "7.6.12",
     "@storybook/react-vite": "7.6.12",
     "@storybook/theming": "7.6.12",
-    "@storybook/types": "7.6.12",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
