--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-intersection-observer",
   "version": "8.26.1",
   "description": "Monitor if a component is inside the viewport, using IntersectionObserver API",
+  "type": "commonjs",
   "source": "./src/index.tsx",
   "main": "./dist/index.js",
   "module": "./dist/esm/index.js",
@@ -112,7 +113,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
@@ -122,9 +123,9 @@
     "react-dom": "^18.2.0",
     "simple-git-hooks": "^2.9.0",
     "size-limit": "^11.0.2",
-    "tsup": "^8.0.1",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "vitest": "^1.3.1"
   },
   "peerDependenciesMeta": {
     "react-dom": {
