chore: update dependencies

--- a/storybook/package.json
+++ b/storybook/package.json
@@ -15,31 +15,31 @@
   },
   "license": "MIT",
   "dependencies": {
-    "framer-motion": "^11.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@storybook/manager-api": "^8.0.9",
+    "framer-motion": "^11.1.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-intersection-observer": "workspace:*",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
+    "@biomejs/biome": "^1.7.1",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-docs": "7.6.17",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addons": "7.6.17",
-    "@storybook/builder-vite": "7.6.17",
-    "@storybook/react": "7.6.17",
-    "@storybook/react-vite": "7.6.17",
-    "@storybook/theming": "7.6.17",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
+    "@storybook/addon-actions": "^8.0.9",
+    "@storybook/addon-docs": "8.0.9",
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/builder-vite": "8.0.9",
+    "@storybook/react": "8.0.9",
+    "@storybook/react-vite": "8.0.9",
+    "@storybook/theming": "8.0.9",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "intersection-observer": "^0.12.2",
-    "postcss": "^8.4.35",
-    "storybook": "7.6.17",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "postcss": "^8.4.38",
+    "storybook": "8.0.9",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10"
   }
 }
