--- a/package.json
+++ b/package.json
@@ -104,28 +104,28 @@
     }
   ],
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
-    "@size-limit/preset-small-lib": "^11.0.2",
+    "@biomejs/biome": "^1.7.1",
+    "@size-limit/preset-small-lib": "^11.1.2",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^15.0.5",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "microbundle": "^0.15.1",
     "npm-run-all": "^4.1.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "simple-git-hooks": "^2.9.0",
-    "size-limit": "^11.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "simple-git-hooks": "^2.11.1",
+    "size-limit": "^11.1.2",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.2"
   },
   "peerDependenciesMeta": {
     "react-dom": {
