fix: use act from `react` instead of deprecated one
https://react.dev/warnings/react-dom-test-utils

--- a/biome.json
+++ b/biome.json
@@ -24,6 +24,9 @@
       "complexity": {
         "noForEach": "off"
       },
+      "style": {
+        "noVar": "off"
+      },
       "a11y": {
         "noSvgWithoutTitle": "off"
       }
