--- a/.github/workflows/pkg-pr.yml
+++ b/.github/workflows/pkg-pr.yml
@@ -14,6 +14,7 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
-
+      - name: Build
+        run: pnpm build
       - name: Publish preview package
         run: pnpx pkg-pr-new publish --no-template
