feat: upgrade to Vitest 2 (#690)
* test: upgrade to vitest 2, and add browser testing

* test: install playwright on matrix tests

* chore: upgrade package.json

* fix: use `beforeAll` instead of `beforeEach` to initiate mocks

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,12 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
+      - name: Install playwright
+        run: pnpx playwright install chromium
       - name: Lint
         run: pnpm biome ci .
       - name: Test
-        run: pnpm test
+        run: pnpm vitest --coverage
         env:
           CI: true
       - name: Build
@@ -57,4 +59,5 @@ jobs:
       - name: Validate types
         run: |
           pnpm tsc
+          pnpx playwright install chromium
           pnpm test
